[test] fix: open java.lang for test cases
dubbo requires reflection access on class loaders